--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -52,13 +52,13 @@ h2
 
 <!-- <img id="face" class="faceoverlap" src="images/body.png" style="width:400px"> -->
 <!-- <img id="brow" class="browoverlap" src="images/brow1.png" style="width:400px"> -->
-<img id="face" class="faceoverlap" src="images/body.png" style="width:800px"> 
-<img id="eye" class="faceoverlap" src="images/eye1.png" style="width:800px">
-<img id="brow" class="faceoverlap" src="images/brow1.png" style="width:800px">
-<img id="nose" class="faceoverlap" src="images/nose2.png" style="width:800px">
-<img id="ear" class="faceoverlap" src="images/ear1.png" style="width:800px">
-<img id="mouth" class="faceoverlap" src="images/mouth1.png" style="width:800px">
-<img id="moustache" class="faceoverlap" src="images/moustache1.png" style="width:800px">
+<img id="face" class="faceoverlap" src="images/body.png" alt="face" style="width:800px"> 
+<img id="eye" class="faceoverlap" src="images/eye1.png" alt="eye" style="width:800px">
+<img id="brow" class="faceoverlap" src="images/brow1.png" alt="brow" style="width:800px">
+<img id="nose" class="faceoverlap" src="images/nose2.png" alt="nose" style="width:800px">
+<img id="ear" class="faceoverlap" src="images/ear1.png" alt="ear" style="width:800px">
+<img id="mouth" class="faceoverlap" src="images/mouth1.png" alt="mouth" style="width:800px">
+<img id="moustache" class="faceoverlap" src="images/moustache1.png" alt="moustache" style="width:800px">
 
 
 <div class="ccButtons">
