--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -23,13 +23,13 @@ h2
 .container {
     position: relative;
     clear: none;
-    float: center;
+    float:left;
 }
 
 .faceoverlap
 {
 	position: absolute;
-	float:center;
+	float:left;
 	top: 200px;
 	border: 5px solid gray;
 }
