--- a/Week2/index.html
+++ b/Week2/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>
+        Home
+    </title>
 <style>
 body {
   background-image: url("sneaker.jpg");
