--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -82,7 +82,7 @@
 
         <button id="button2" class="button">Project 2: Online Shoppe</button>
         <div id="div2" class="hidden">
-            <p>In this project, I designed an online sneaker shop. I had 3 sneaker models with pictures, features, and comparison table. I also had a order page. This was the first time I learned making websites with multiple pages with references to each other. I also used CSS for the first time to integrate design elements to my website such as colors, font styles, etc. It was a very fun project.</p>
+            <p>In this project, I designed an online sneaker shop. I had three sneaker models with pictures, features, and a comparison table for their features and prices. I also had a order page. This was the first time I learned making websites with multiple pages with references to each other. I also used CSS for the first time to integrate design elements to my website such as colors, font styles, etc. It was a very fun project.</p>
             <a href="https://sinoscope.github.io/IT1150/Week2/">Click to see my Project 2: Online Shoppe</a>
         </div><br>
 
